



2003-06-02  Deepayan Sarkar  <deepayan@stat.wisc.edu>

	* R/em.algorithm.R, R/postprob.R, R/zzz.R, R/classes.R:
	restructured classes and methods codes in various files

2003-06-01  Deepayan Sarkar  <deepayan@stat.wisc.edu>

	* R/em.algorithm.R:
	changed method dispatch of em so that data can be a matrix, not
	necessarily an exprSet, thus making dependence on bioconductor
	optional
