@@ -1,13 +1,12 @@
 Package: EBarrays
-Version: 1.1.0
-Date: 2004/10/04
+Version: 1.1.1
+Date: 2005/09/28
 Title: Empirical Bayes for Microarrays
 Author: Christina Kendziorski, Michael Newton and Deepayan Sarkar
 Maintainer: Deepayan Sarkar <deepayan@stat.wisc.edu>
 Description: EBarrays provides tools for the analysis of replicated
         microarray data across multiple conditions.
-Depends: R (>= 2.0.0), Biobase, utils, lattice
+Depends: R (>= 2.2.0), Biobase, utils, lattice
 LazyLoad: yes
 License: GPL Version 2.0 or later.
-Packaged: Mon Oct 4 21:29:41 2004; deepayan
 
