@@ -1,6 +1,8 @@
 
+2003-06-02  Deepayan Sarkar  <deepayan@stat.wisc.edu>
 
-
+        * R/plots.R: updated qqmath calls in accordance with changes 
+        in lattice
 
 2003-06-02  Deepayan Sarkar  <deepayan@stat.wisc.edu>
 
